--- a/customizations/organization/15493/Progroup Translation/06_IT/Intern/page2.css
+++ b/customizations/organization/15493/Progroup Translation/06_IT/Intern/page2.css
@@ -55,7 +55,7 @@
 .customization2_attendee_contact-data_last-name_error:after,
 .customization2_attendee_contact-data_first-name_error:after,
 .customization2_attendee_contact-data_salutation_error:after{
-    content: "Missing 3";
+    content: "Si prega di compilare";
     text-indent: 0;
     display: block;
     line-height: initial;
@@ -69,39 +69,39 @@
 }
 
 .customization2_attendee-1 .customization2_attendee_title:after {
-    content: "64";
+    content: "VENGO DA SOLO";
     font-size: 16px;
 }
 
 .customization2_attendee_contact-data_headline::after {
-    content: "66";
+    content: "Dati personali";
     text-indent: 0px;
     display: block;
     line-height: initial;
 }
 
 .customization2_attendee_contact-data_salutation_label:after {
-    content: "67";
+    content: "Titolo";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_title_label:after {
-    content: "73";
+    content: "Titolo (opzionale)";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_first-name_label:after {
-    content: "72";
+    content: "Nome";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_last-name_label:after {
-    content: "76";
+    content: "Cognome";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_street:before {
-    content: "78";
+    content: "Indirizzo privato";
     display: block;
     margin-top: 24px;
     font-size: 1rem;
@@ -110,7 +110,7 @@
 }
 
 .customization2_attendee_contact-data_street > vv-input::before {
-    content: "79";
+    content: "(Per l’invio postale di documenti come ad es. il tuo biglietto, il programma e ulteriori informazioni)";
     display: block;
     padding-bottom: 16px;
     font-size: 14px;
@@ -118,47 +118,47 @@
 }
 
 .customization2_attendee_contact-data_street_label:after {
-    content: "80";
+    content: "Via";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_street-number_label:after {
-    content: "81";
+    content: "N°:";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_zip_label:after {
-    content: "82";
+    content: "CAP";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_city_label:after {
-    content: "83";
+    content: "Luogo";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_country_label:after {
-    content: "84";
+    content: "Paese";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email_label:after {
-    content: "88";
+    content: "Indirizzo e-mail";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email-confirmation_label:after {
-    content: "90";
+    content: "Conferma l’indirizzo mail";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
-    content: "92";
+    content: "Telefono (opzionale)";
     font-size: 14px;
 }
 
 .customization2_attendee_contact-data_email:before {
-    content: "94";
+    content: "Ulteriori indicazioni";
     display: block;
     margin-top: 24px;
     padding-bottom: 16px;
@@ -168,113 +168,113 @@
 }
 
 .weitereAngabenTeilnehmer p:after{
-    content: "94";
+    content: "Ulteriori indicazioni";
     font-size: 1rem !important;
 }
 
 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:after{
-    content: "96";
+    content: "Stabilimento/sito";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-3 .customization2_attendee_further-data_custom-question_label:after{
-    content: "99";
+    content: "Voglio arrivare il seguente giorno";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-4 .customization2_attendee_further-data_custom-question_label:after{
-    content: "Missing 1";
+    content: "Ho bisogno di una camera d'albergo";
     font-size: 14px;
 }
 
 .customization2_attendee-1 .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_label:after{
-    content: "102";
+    content: "Per la cena intergalattica scelgo:";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_label:after{
-    content: "128";
+    content: "Il mio accompagnatore per la cena intergalattica sceglie";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "103";
+    content: "Menù di pesce";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-5 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
-    content: "104";
+    content: "Menù vegetariano";
     font-size: 14px;
 }
 
 .customization2_attendee_further-data_custom-question-6 .customization2_attendee_further-data_custom-question_label:after{
-    content: "105";
+    content: "Intolleranze (optional)";
     font-size: 14px;
 }
 
 .customization2_attendee_edit-action_save:after {
-    content: "107";
+    content: "Salva";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_title:after {
-    content: "110";
+    content: "VENGO ACCOMPAGNATO";
     font-size: 16px;
 }
 
 .customization-button-previous:after {
-    content: "170";
+    content: "Modifica la selezione";
     font-size: 16px;
 }
 
 .customization2_attendee_edit-action_cancel:after {
-    content: "Missing 2";
+    content: "Cancella";
     font-size: 16px;
 }
 
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_label:after{
-    content: "330";
+    content: "Il mio accompagnatore per la cena intergalattica sceglie";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-1 p.vv-control-label:after{
-    content: "331";
+    content: "Menù di pesce";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-1 .customization2_attendee_further-data_custom-question_radio-line-2 p.vv-control-label:after{
-    content: "332";
+    content: "Menù vegetariano";
     font-size: 14px;
 }
 
 .customization2_attendee-2 .customization2_attendee_further-data_custom-question-2 .customization2_attendee_further-data_custom-question_label:after{
-    content: "334";
+    content: "Intolleranze (optional)";
     font-size: 14px;
 }
 
 .custom_terms_checkbox .customization2_booking-terms_text:after {
-    content: "352";
+    content: "Ho preso visione del fatto che l’evento avrà luogo in ottemperanza ai regolamenti anti Covid del Land della Sassonia vigenti al momento dell’evento stesso. Sarà mia cura poter esibire tutti i certificati necessari il giorno dell’evento.";
     font-size: 14px
 }
 
 .customization2_booking-terms_text:after {
-    content: "353";
+    content: "Presto il mio consenso per le seguenti condizioni:";
     font-size: 14px
 }
 
 .customization2_booking-terms_custom-term-1:after {
-    content: "354";
+    content: "Videoriprese e foto";
     font-size: 14px;
 }
 
 .customization2_booking-terms_custom-term-2:after {
-    content: "355";
+    content: "Privacy";
     font-size: 14px;
 }
 
 .customization2_booking-terms_custom-term-3:after {
-    content: "356";
+    content: "Compliance";
     font-size: 14px;
 }
 
