--- a/customizations/organization/15493/Progroup Translation/06_IT/Intern/page3.css
+++ b/customizations/organization/15493/Progroup Translation/06_IT/Intern/page3.css
@@ -13,28 +13,28 @@ p.ew-confirmation__organizer-contact > span:nth-of-type(1) {
 }
 
 .ew-confirmation__header .header__label:after {
-    content: "172";
+    content: "Iscriviti ora";
 	text-indent: 0;
 	display: block;
 	line-height: normal;
 }
 
 .customization-confirmation-description:after {
-	content: "174";
+	content: "Grazie mille per la tua registrazione. A breve riceverai la tua conferma via mail.";
 	text-indent: 0;
 	display: block;
 	line-height: normal;
 }
 
 .ew-confirmation__text-paragraph:after {
-	content: "178";
+	content: "Potrai vedere e gestire in ogni momento la tua registrazione dal portale. Per effettuare il login avrai bisogno del tuo numero di registrazione e del tuo indirizzo e-mail.";
 	text-indent: 0;
 	display: block;
 	line-height: normal;
 }
 
 .customization-client-portal-link:after {
-    content: "180";
+    content: "Al portale di registrazione";
     text-indent: 0;
     display: block;
     line-height: normal;
@@ -42,7 +42,7 @@ p.ew-confirmation__organizer-contact > span:nth-of-type(1) {
 }
 
 p.ew-confirmation__organizer-contact span:nth-of-type(1):after {
-	content: "182";
+	content: "In caso di domande puoi sempre rivolgerti a events@progroup.ag";
 	text-indent: 0;
 	line-height: normal;
 	font-size: 14px;
