--- a/customizations/organization/15493/Progroup Translation/07_PL/Intern/nextbuttons.css
+++ b/customizations/organization/15493/Progroup Translation/07_PL/Intern/nextbuttons.css
@@ -3,11 +3,11 @@
 }
 
 .customization-booking-area-wrapper-page1 .customization-button-next:after{
-    content:"59";
+    content:"Dalej";
     font-size: 16px;
 }
 
 .customization-booking-area-wrapper-page2 .customization-button-next:after{
-    content:"171";
+    content:"Zarejestruj mnie teraz";
     font-size: 16px;
 }
